--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="box">
               <h3>Apartman</h3>
-              <h4><sup>₺</sup>60<span> / aylık</span></h4>
+              <h4><sup>₺</sup>75<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik</li>
@@ -568,7 +568,7 @@
             <div class="box recommended">
               <span class="recommended-badge">En uygunu</span>
               <h3>Site</h3>
-              <h4><sup>₺</sup>80<span> / aylık</span></h4>
+              <h4><sup>₺</sup>100<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik</li>
@@ -585,7 +585,7 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box">
               <h3>İş Merkezi</h3>
-              <h4><sup>₺</sup>120<span> / aylık</span></h4>
+              <h4><sup>₺</sup>125<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik</li>
@@ -621,7 +621,7 @@
                 class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Aidatları toplayamıyorsanız, kavgalardan sıkıldıysanız, birliği sağlayamadığınız için her iş yarım
+                Aidatları toplayamıyorsanız, kavgalardan sıkıldıysanız, birliği sağlayamadığınız için işler yarım
                 kalıyorsa, hukuksal işler ve muhasebe ile uğraşacak vaktiniz yoksa devretmelisiniz.
               </p>
             </div>
@@ -823,7 +823,7 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Telefon: <a href="tel:+905467620002"><strong> 0546 762 00 02</strong></a> </h4>
+                <h4>Telefon: <a href="tel:+905395733474"><strong> 0539 573 34 74</strong></a> </h4>
 
               </div>
 
@@ -886,7 +886,7 @@
               <br>
 
               Şişli / İstanbul <br><br>
-              <strong>Telefon:</strong> <a href="tel:+905467620002">0546 762 00 02</a> <br>
+              <strong>Telefon:</strong> <a href="tel:+905395733474">0539 573 34 74</a> <br>
               <strong>Email: </strong><a href="mailto:info@pargayonetim.com">info@pargayonetim.com</a> <br>
             </p>
           </div>
