--- a/index.html
+++ b/index.html
@@ -335,26 +335,17 @@
                 class="portfolio-lightbox preview-link" title="Ahmet Urgancı İş Merkezi"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Yeşilova.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Yeşilova Apartmanı - Şişli</h4>
-              <p></p>
-              <a href="assets/img/portfolio/Yeşilova.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Yeşilova Apartmanı"><i class="bx bx-plus"></i></a>
-              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+              <img src="assets/img/portfolio/Alper İş Merkezi.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Alper İş Merkezi - Beşiktaş</h4>
+                <p></p>
+                <a href="assets/img/portfolio/Alper İş Merkezi.jpeg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox preview-link" title="Alper İş Merkezi"><i class="bx bx-plus"></i></a>
+                <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+              </div>
             </div>
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/Kardelen Apartmanı.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Kardelen Apartmanı - Esenyurt</h4>
-              <p></p>
-              <a href="assets/img/portfolio/Kardelen Apartmanı.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Kardelen Apartmanı"><i class="bx bx-plus"></i></a>
-              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
-            </div>
+
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <img src="assets/img/portfolio/ozerapt.png" class="img-fluid" alt="">
