--- a/index.html
+++ b/index.html
@@ -336,11 +336,11 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-              <img src="assets/img/portfolio/Alper İş Merkezi.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Alper İş Merkezi.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Alper İş Merkezi - Beşiktaş</h4>
                 <p></p>
-                <a href="assets/img/portfolio/Alper İş Merkezi.jpeg" data-gallery="portfolioGallery"
+                <a href="assets/img/portfolio/Alper İş Merkezi.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox preview-link" title="Alper İş Merkezi"><i class="bx bx-plus"></i></a>
                 <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
               </div>
