--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
               <li data-filter="*" class="filter-active">Hepsi</li>
               <li data-filter=".filter-app">İş Merkezi</li>
               <li data-filter=".filter-card">Apartman</li>
-              <!-- <li data-filter=".filter-web">Web</li> -->
+              <li data-filter=".filter-web">Site</li>
             </ul>
           </div>
         </div>
@@ -344,6 +344,16 @@
               <a href="assets/img/portfolio/Alper İş Merkezi.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Alper İş Merkezi"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/RAFTOZ ARGUN.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Raftoz Argun Sitesi - Bahçelievler</h4>
+              <p></p>
+              <a href="assets/img/portfolio/RAFTOZ ARGUN.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Raftoz Argun Sitesi"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
