--- a/index.html
+++ b/index.html
@@ -346,6 +346,16 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/portfolio/Savaş.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Savaş İş Merkezi - Bahçelievler</h4>
+              <p></p>
+              <a href="assets/img/portfolio/Savaş.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Savaş İş Merkezi"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <img src="assets/img/portfolio/RAFTOZ ARGUN.png" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -363,6 +373,26 @@
               <p></p>
               <a href="assets/img/portfolio/ozerapt.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Yaşar Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/BEYAZSARAY.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Beyaz Saray Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="assets/img/portfolio/BEYAZSARAY.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Beyaz Saray Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/LİMANOĞLU.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Limanoğlu Apartmanı - Küçükçekmece</h4>
+              <p></p>
+              <a href="assets/img/portfolio/LİMANOĞLU.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Limanoğlu Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
