--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <title>PARGA YÖNETİM</title>
   <meta content="" name="description">
-  <meta content="Parga,PargaYonetimi,ApartmanYonetimi" name="keywords">
+  <meta content="Apartman, Yönetimi, Şirketi, Site, Yönetim" name="keywords">
+  <meta name="description" content="Apartman Yönetim Şirketi">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -483,6 +484,16 @@
               <p></p>
               <a href="assets/img/portfolio/İMTAŞ.png.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="İmtaş Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/Tenten.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Tenten Apartmanı - Küçükçekmece</h4>
+              <p></p>
+              <a href="assets/img/portfolio/Tenten.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Tenten Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
