--- a/index.html
+++ b/index.html
@@ -826,6 +826,112 @@
       </div>
     </section><!-- End Team Section -->
 
+    <!-- ======= Team Section ======= -->
+    <section id="team" class="team">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Çözüm Ortaklarımız</h2>
+          <h3>Çözüm <span>Ortaklarımız</span></h3>
+          <p>Sizlere en iyi hizmeti vermek için birlikte çalıştığımız ortaklarımız!</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/alphan mekanik.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Alphan Mekanik</h4>
+                <span>Sıhhi ve Mekanik</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/KARADAĞ ELEKTRİK.png" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Karadağ Elektrik</h4>
+                <span>Elektrik ve Mühendislik</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/apsiyon-site.jpeg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Apsiyon</h4>
+                <span>Site Yönetimi Dijital Asistanı</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/esay.png" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Esay Asansör</h4>
+                <span>Asansör ve Mühendislik</span>
+              </div>
+            </div>
+          </div>
+
+          <!--  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+              <div class="member">
+                <div class="member-img">
+                  <img src="assets/img/team/defauyt.png" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Selma Denizman</h4>
+                  <span>Muhasebe</span>
+                </div>
+              </div>
+            </div> -->
+
+        </div>
+
+      </div>
+    </section><!-- End Team Section -->
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -983,7 +1089,7 @@
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#contact" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#contact" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#contact" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/pargayonetim/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#contact" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#contact" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
