--- a/index.html
+++ b/index.html
@@ -497,6 +497,16 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/ÇAKMAK APARTMANI.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Çakmak Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="assets/img/portfolio/ÇAKMAK APARTMANI.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Çakmak Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
@@ -837,6 +847,23 @@
         </div>
 
         <div class="row">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/fakhani.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Cahit Fakhani - Fakhani Hukuk Bürosu</h4>
+                <span>Hukuk Danışmanı</span>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
