--- a/index.html
+++ b/index.html
@@ -507,6 +507,16 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/GÜL APARTMANI.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Gül Apartmanı - Küçükçekmece</h4>
+              <p></p>
+              <a href="assets/img/portfolio/GÜL APARTMANI.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Gül Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
@@ -599,9 +609,9 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6">
-            <div class="box">
+            <div class="box recommended">
               <h3>Apartman</h3>
-              <h4><sup>₺</sup>90<span> / aylık</span></h4>
+              <h4><sup>₺</sup>108<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik</li>
@@ -617,9 +627,9 @@
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended">
-              <span class="recommended-badge">En uygunu</span>
+              <!-- <span class="recommended-badge">En uygunu</span> -->
               <h3>Site</h3>
-              <h4><sup>₺</sup>125<span> / aylık</span></h4>
+              <h4><sup>₺</sup>150<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik</li>
@@ -634,9 +644,9 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
-            <div class="box">
+            <div class="box recommended">
               <h3>İş Merkezi</h3>
-              <h4><sup>₺</sup>175<span> / aylık</span></h4>
+              <h4><sup>₺</sup>225<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik</li>
