--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 
   <title>PARGA YÖNETİM</title>
   <meta content="" name="description">
-  <meta content="Apartman, Yönetimi, Şirketi, Site, Yönetim" name="keywords">
-  <meta name="description" content="Apartman Yönetim Şirketi">
-
+  <!-- <meta
+    content="apartman yönetimi, apartman yöneticiliği, apartman yöneticisi, profesyonel apartman yöneticiliği, yönetim, yönetimi, yöneticilik, yönetimi, apartman yönetim şirketi"
+    name="keywords"> -->
+  <meta name="description"
+    content="apartman yönetimi, apartman yöneticiliği, apartman yöneticisi, profesyonel apartman yöneticiliği, yönetim, yönetimi, yöneticilik, yönetimii apartman yönetim şirketi">
+  <meta name="keywords"
+    content="apartman yönetimi, apartman yöneticiliği, apartman yöneticisi, profesyonel apartman yöneticiliği, yönetim, yönetimi, yöneticilik, yönetimi, apartman yönetim şirketi">
+  <meta name="page-topic" content="trade">
+  <meta http-equiv="Content-Language" content="tr">
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/favicon.png" rel="icon">
@@ -55,7 +61,7 @@
           <li><a class="nav-link scrollto" href="#services">Hizmetlerimiz</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Referanslarımız</a></li>
           <li><a class="nav-link scrollto" href="#team">Takımımız</a></li>
-          <li><a href="www.pargayonetim.com">Blog</a></li>
+          <!-- <li><a href="www.pargayonetim.com">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -87,6 +93,11 @@
       <h1> <strong>PARGA</strong></h1>
       <h2>Apartman ve Site Yönetimi</h2>
       <h2>Müthiş hizmeti sunmak için dinamik ekibimizle hizmetinizdeyiz</h2>
+      <h2> <a class="a" href="#sss"> <strong>Yaşam alanınızdaki tamir ve arıza gibi sorunları hızlıca çözüyoruz ve
+            şirket
+            olarak karşılıyoruz</strong>
+        </a></h2>
+
       <a href="#about" class="btn-get-started scrollto">Biz kimiz?</a>
     </div>
   </section><!-- End Hero -->
@@ -620,7 +631,7 @@
                 <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">İletişime geç</a>
+                <a href="#contact" class="btn-buy">İletişime geç</a>
               </div>
             </div>
           </div>
@@ -655,7 +666,7 @@
                 <!-- <li class="na">Massa ultricies mi</li> -->
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">İletişime geç</a>
+                <a href="#contact" class="btn-buy">İletişime geç</a>
               </div>
             </div>
           </div>
@@ -669,7 +680,7 @@
     <section id="faq" class="faq">
       <div class="container">
 
-        <div class="section-title">
+        <div id="sss" class="section-title">
           <h2>S.S.S</h2>
           <h3>Sıkça Sorulan <span>Sorular</span></h3>
         </div>
@@ -696,7 +707,8 @@
               <p>
                 Yaşam alanınızla ilgili her işi biz profesyonel firmalar üstleniyor ve sizi kavga, dövüş, sinir, stres
                 ve zaman kaybından kurtarıyoruz. Bunu yaparken de huzurun korunması en önemli önceliğimiz oluyor.
-                Aidatlar düzenli toplanıyor, giderler düzenli ödeniyor, rutin bakımlar yapılıyor.
+                Aidatlar düzenli toplanıyor, giderler düzenli ödeniyor, rutin bakımlar yapılıyor ve arızalar hızlıca
+                çözülüyor.
               </p>
             </div>
           </li>
@@ -707,8 +719,8 @@
                 class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Bizi arayın! Bizler bu konuda deneyimliyiz. Bize devretmeyi düşündüğünüz anda sorunların çözüme bir
-                adım daha yaklaştığınızı göreceksiniz.
+                Bizi arayın! Bizler bu konuda deneyimliyiz. Birden fazla yol var, bizi ararsanız memnuniyetle hangi
+                yolun size uygun olduğunu gösteririz.
               </p>
             </div>
           </li>
@@ -721,6 +733,20 @@
               <p>
                 Yine bizi arayın! Biz büyük, küçük iş ayırmıyoruz. Lokasyona göre fiyat vermiyoruz. İş yüküne ve
                 bütçenize göre fiyat veriyoruz ve bu konuda çok esneğiz.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Yaşam alanımızdaki tamir ve arızaları
+              nasıl çözüyorsunuz? <i class="bi bi-chevron-down icon-show"></i><i
+                class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq5" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Yaşam alanımızdaki tamir ve arızalar için bütçe oluşturuyoruz. Bu bütçenin tamamlanmasını beklemiyoruz.
+                Belli
+                bir miktara ulaştığı zaman vadeli şekilde veya şirket havuzumuzdan ödemeyi gerçekleştiriyoruz. Acil
+                tamir ve arızalar için ise bütçe toplanmasını beklemiyoruz, kasanızda yeterli para da aramıyoruz. Şirket
+                havuzumuzdan ödemeyi yapıyor ve sorunu çözüyoruz.
               </p>
             </div>
           </li>
@@ -790,7 +816,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/defauyt.png" class="img-fluid" alt="">
+                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -808,7 +834,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/defauyt.png" class="img-fluid" alt="">
+                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -819,6 +845,42 @@
               <div class="member-info">
                 <h4>İrfan Denizman</h4>
                 <span>(E)Emniyet Müdürü</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Sema H.</h4>
+                <span>Muhasebe</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/defauyt.png" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Muhammet Dalkürek
+                </h4>
+                <span>Teknik Personel</span>
               </div>
             </div>
           </div>
@@ -1007,7 +1069,7 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Telefon: <a href="tel:+905395733474"><strong> 0539 573 34 74</strong></a> </h4>
+                <h4>Telefon: <a href="tel:+905395733474"><strong> 0546 762 00 02</strong></a> </h4>
 
               </div>
 
@@ -1070,7 +1132,7 @@
               <br>
 
               Şişli / İstanbul <br><br>
-              <strong>Telefon:</strong> <a href="tel:+905395733474">0539 573 34 74</a> <br>
+              <strong>Telefon:</strong> <a href="tel:+905395733474">0546 762 00 02</a> <br>
               <strong>Email: </strong><a href="mailto:info@pargayonetim.com">info@pargayonetim.com</a> <br>
             </p>
           </div>
