--- a/index.html
+++ b/index.html
@@ -538,6 +538,17 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/yıldızapartmanı.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Yıldız Apartmanı - Avcılar</h4>
+              <p></p>
+              <a href="assets/img/portfolio/yıldızapartmanı.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Yıldız Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
@@ -632,7 +643,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="box recommended">
               <h3>Apartman</h3>
-              <h4><sup>₺</sup>108<span> / aylık</span></h4>
+              <h4><sup>₺</sup>150<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Temizlik</li>
@@ -983,23 +994,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/esay.png" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Esay Asansör</h4>
-                <span>Asansör ve Mühendislik</span>
-              </div>
-            </div>
-          </div>
+
 
           <!--  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
               <div class="member">
