--- a/index.html
+++ b/index.html
@@ -549,6 +549,26 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/KARANFİL APARTMANI.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Karanfil Apartmanı - Kağıthane</h4>
+              <p></p>
+              <a href="assets/img/portfolio/KARANFİL APARTMANI.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Karanfil Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/BİRLİK APARTMANI.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Birlik Apartmanı - Bahçelievler</h4>
+              <p></p>
+              <a href="assets/img/portfolio/BİRLİK APARTMANI.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Birlik Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
