--- a/index.html
+++ b/index.html
@@ -569,6 +569,26 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/KEREM APARTMANI.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Kerem Apartmanı - Şişli</h4>
+              <p></p>
+              <a href="assets/img/portfolio/KEREM APARTMANI.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Kerem Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/ALARA APARTMANI.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Alara Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="assets/img/portfolio/Alara APARTMANI.png" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Alara Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
