--- a/index.html
+++ b/index.html
@@ -589,6 +589,26 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/güney inci.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Güney İnci Apartmanı - Küçükçekmece</h4>
+              <p></p>
+              <a href="assets/img/portfolio/güney inci.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Güney İnci Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="assets/img/portfolio/günes.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Güneş Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="assets/img/portfolio/günes.jpeg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Güneş Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
