--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JSMMXR6B8S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-JSMMXR6B8S');
+</script>
 
 <body>
 
