--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/alphan mekanik.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/3k.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1023,8 +1023,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Alphan Mekanik</h4>
-                <span>Sıhhi ve Mekanik</span>
+                <h4>3k Mühendislik Mekanik</h4>
+                <span>Sıhhi Tesisat ve Mekanik</span>
               </div>
             </div>
           </div>
